--- a/src/app/(rotas)/painel/painel.module.css
+++ b/src/app/(rotas)/painel/painel.module.css
@@ -3,7 +3,6 @@
 .container {
   background: #F4F1DC;
   min-height: 100vh;
-  padding: 20px 0;
   font-family: 'Montserrat Alternates', sans-serif; /*deixa muito bruto 'Seymour One', cursive;*/
 }
 
@@ -22,11 +21,13 @@
   font-size: 38px;
   color: #3A6FCF;
   font-weight: 800;
+  font-family: 'Seymour One', cursive;
 }
 
 .subtitle {
   font-size: 14px;
   margin-top: -8px;
+  color: #3A6FCF;
 }
 
 .senhasBtn {
@@ -91,7 +92,7 @@
 .label {
   margin: 4px 0 5px 0;
   font-size: 14px;
-color: #3A6FCF;
+  color: #3A6FCF;
 }
 
 .input {
@@ -136,8 +137,9 @@ color: #3A6FCF;
 }
 
 .patternBottom {
-  width: 500%;
-  height: 39.5vh; 
+  margin-top: 3rem;
+  width: 100%;
+  height: 170px; 
   background-image: url('/images/albertos.png');
   background-size: contain;
   background-repeat: repeat-x;
