--- a/src/app/(rotas)/senhas/senhas.module.css
+++ b/src/app/(rotas)/senhas/senhas.module.css
@@ -1,6 +1,4 @@
-body{
-  overflow-y: hidden;
-}
+
 /* ---- CONTAINER GERAL ---- */
 .container {
   width: 100%;
@@ -16,7 +14,7 @@ body{
 .patternTop,
 .patternBottom {
   width: 100%;
-  height: 18.5vh; 
+  height: 290px; 
   background-image: url('/images/albertos.png');
   background-size: contain;
   background-repeat: repeat-x;
@@ -24,7 +22,7 @@ body{
 
 /* ---- CONTEÚDO CENTRAL ---- */
 .content {
-  width: 100%;
+  width: 300%;
   max-width: 1100px;
   display: flex;
   justify-content: space-between;
@@ -70,4 +68,9 @@ body{
   background-size: 320px;
   background-repeat: no-repeat;
   background-position: center;
+}
+.centerImage img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
