--- a/src/app/(rotas)/carrinho/carrinho.module.css
+++ b/src/app/(rotas)/carrinho/carrinho.module.css
@@ -33,7 +33,7 @@
 .formasPagamento {
   flex: 1;
   padding: 3rem 4rem;
-  max-width: calc(100% - 535px);
+  max-width: calc(100% - 830px);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -64,10 +64,11 @@
   right: 0;
   top: 0;
   height: 100vh;
+  z-index: 1;
 }
 
 .imagenesColuna {
-  width: 330px;
+  width: 280px;
   background-color: #FFF8E8;
   display: flex;
   flex-direction: column;
@@ -81,10 +82,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 330px;
+  width: 100%;
   height: auto;
-  flex-shrink: 0; 
-  opacity: 0.8;
+  flex-shrink: 0;
 }
 
 .mascote {
@@ -92,6 +92,7 @@
   height: auto;
   object-fit: contain;
   display: block;
+  opacity: 0.5;
 }
 
 .sidebarPedido {
@@ -99,7 +100,6 @@
   background-color: #FFF8E8;
   padding: 2rem 2.5rem;
   overflow-y: auto;
-  box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
   position: relative;
   z-index: 2;
 }
